# hh-lp-gpu

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: cudnn_operations.cpp  cudnn_operations.hpp  main.cpp  types.hpp  utest.hpp  utils.hpp
src/data/: bwd_data.hpp  data_set.hpp  fwd_data.hpp  inference_data.hpp  init_data.hpp  layer.hpp  layer_state.hpp  loss_bwd_data.hpp  loss_fwd_data.hpp  model.hpp  opt_data.hpp  opt_layer_data.hpp  prediction_data.hpp  terminiate_data.hpp  training_data.hpp  update_data.hpp
src/graph/: network_graph.hpp
src/kernels/: linear_layer_kernel.cu  linear_layer_kernel.h
src/layers/: layer.hpp  linear_layer.hpp  sigmoid_activation_layer.hpp
src/loss/: loss.hpp  quadratic_loss.hpp
src/model/data/: cuda_data.hpp  dims.hpp  layer_data.hpp  layer_dims.hpp  layer_state.hpp  loss_state.hpp  network_state.hpp  nn_state.hpp  parameters.hpp  shape.hpp  tensor.hpp
src/model/layer/: convolution_layer.hpp  layer.hpp  linear_layer.hpp  pooling_layer.hpp  sigmoid_activation_layer.hpp
src/model/loss/: loss.hpp  quadratic_loss.hpp
src/model/optimizer/: optimizer.hpp  sgd_optimizer.hpp
src/optimizers/: optimizer.hpp  sgd_optimizer.hpp
src/state/: inference_state.hpp  inference_state_manager.hpp  optimizer_state.hpp  optimizer_state_manager.hpp  pipeline_state.hpp  pipeline_state_manager.hpp  training_state.hpp
src/task/: bwd_task.hpp  fully_connected_layer_task.hpp  fwd_task.hpp  layer_task.hpp  linear_layer_task.hpp  loss_task.hpp  optimizer_task.hpp  sigmoid_activation_task.hpp
src/task/loss/: loss_task.hpp  quadratic_loss_task.hpp
src/task/optimizer/: optimizer_task.hpp  sgd_optimizer_task.hpp
src/tools/: defer.hpp  gpu.hpp  timer.hpp  utest.hpp
tests/: cublas_function.cpp  cublas_function.hpp  layers.cpp  layers.hpp  main.cpp  utest.hpp
tools/: batch_generator.hpp
tools/mnist/: minist_loader.hpp  mnist_loader.hpp  mnist_pytorch.py
tools/mnist/python/: mnist_pytorch.py
